# lum_rust_backend

./: .env  .env.example  .env.microservices  .env.production  .gitallowed  .gitignore  ANALISIS_COMPLETO_DATA_SUCIA.md  API_DOCUMENTATION_UPDATE_SUMMARY.md  API_DOC_LUMIAI_DB.md  API_DOC_LUMIAI_ENDPOINT.md  API_DOC_LUMIMATCH.md  API_DOC_NOTIFICATIONS.md  API_DOC_NOTIFICATIONS_USAGE.md  API_DOC_OCR_FLUJO_SIN_QR.md  API_DOC_PROCESSFROMCUFE.md  API_DOC_REDEMPTIONS.md  API_DOC_REDEMPTIONS_BACKUP_20251018.md  API_DOC_REDEMPTIONS_FRONTEND.md  API_DOC_REDEMPTIONS_PROXIMOS_PASOS.md  API_ENDPOINTS.md  API_ENDPOINTS_LOGIN.md  API_ENDPOINTS_USERINVOICESSYNC.md  AUDIT_FIXES_IMPLEMENTED.md  AUDIT_LOGGING_EFFICIENCY_REPORT.md  AUDIT_LOGGING_INTEGRATION_SUMMARY.md  BINARIO_PRODUCCION_README.md  CACHE_ETAG_DOCS.md  CASE_SENSITIVITY_VALIDATION_SUMMARY.md  CIERRE_SESION.md  COMPILACION_LIMPIA.md  CONFIGURACION_ENV_EXPLICADA.md  CORRECTIONS_APPLIED_REPORT.md  CORRECTION_PLAN_PROCESS_FROM_URL.md  Cargo.toml  DAILY_GAME_DEPLOYMENT_ANALYSIS.md  DAILY_GAME_FLUTTER_INTEGRATION.md  DAILY_GAME_IMPLEMENTATION_SUMMARY.md  DAILY_GAME_PRODUCTION_STATUS.md  DAILY_GAME_TESTING_GUIDE.md  DAILY_GAME_TESTING_RESULTS.md  (+248 more)
.cargo/: config.toml
.sqlx/: query-2416cb0f5b3bf1d087f9eb66acbab4674e3b348f37297d1f4872224e8abfad73.json  query-336a2facf773056a49a1cfe10b27ed25b578ea334be87b722e6d481adb0e1283.json  query-35b9011ecaa8ec77a2fbb03c4e1560fa9c7206e53ed3c50308dcaabc59944a00.json  query-4263599a307ebce807f49311710d5aa846b6309dac2297ff7bb89b60b63240e9.json  query-666a744d4ded64fa18edf50611c66fc05348a76d71f50032058f02b77650ac74.json  query-d33202b3a54bc0cc08a2a5df931c1a4b73fad5b04f6b20dac3a2cef1f34aedfc.json  query-d51efe626314b49a81285cd15ec6b3496e25daa62b1ae121f7c85eedaa2e4975.json
api-gateway/: Cargo.toml
api-gateway/src/: main.rs
db/migrations/: 20251108_add_sync_columns_and_versioning.sql  20251108_create_integrity_materialized_views.sql  20251108_remove_dataset_versions.sql  20251114_update_issuer_mv_to_stores.sql  20251128_gamification_performance_optimizations.sql  20251128_populate_gamification_tables.sql  20251129_batch_consistent_month.sql  20251129_fix_gamification_fk_constraints.sql  20251129_remove_trigger_streak_calculation.sql  20251129_setup_cron_consistent_month.sql  20251130_fix_rewards_refresh_user_summary.sql  20251130_fix_vw_user_lum_levels.sql  20251130_optimize_gamification_schema.sql  20251130_restore_v_user_current_level.sql  20251130_update_levels_lum_universe.sql  20251130_update_track_user_action.sql  20251201_add_streak_accumulations.sql  20251201_add_streak_accumulations_v2.sql  20251201_create_notification_triggers.sql  20251201_create_notifications_schema.sql  20251201_fix_batch_consistent_month.sql  20251201_fix_batch_consistent_month_v2.sql  20251201_fix_batch_consistent_month_v3.sql  20251201_fix_gamification_robustness_v4.sql  20251201_fix_v_user_dashboard_balance.sql  20251205_add_level_points_range_to_dashboard.sql  20251209_fix_consistent_month_logic.sql  20251209_fix_daily_login_reset.sql  20251209_fix_invoice_trigger.sql  20251210_fix_track_user_action_logic.sql  20251216_unify_balance_ledger_model.sql  20251218_invoice_action_url_mi_historial.sql  20251218_invoice_push_body_add_amount.sql  20251218_schedule_batch_consistent_month_job.sql  20251219_fix_dashboard_active_streaks_shape.sql  20251219_refresh_gamification_on_invoice_header_changes.sql  backup_pre_sync_migration_schema.sql
docs/: BALANCE_MODEL.md  DOCUMENTACION_FRONTEND_USUARIOS.md  ESTADO_ACTUAL_IMPLEMENTACION.md  UTC_TIMEZONE_HANDLING.md
docs/backup_legacy/: GAMIFICATION_API_ENDPOINTS.md  GAMIFICATION_CONCEPTUAL_GUIDE.md  GAMIFICATION_FRONTEND_API_GUIDE.md  GAMIFICATION_SYSTEM_AUDIT_REPORT.md  GAMIFICATION_TABLES_GUIDE.md
docs/gamification/: API_DOC_GAMIF.md  API_DOC_GAMIF_CORE_MECHANICS.md  API_REFERENCE_FLUTTER.md
docs/redemptions/: 01-arquitectura.md  02-conceptos.md  03-modelo-datos.md  04-api-usuarios.md  05-api-merchants.md  06-autenticacion.md  07-webhooks.md  08-push-notifications.md  09-analytics.md  10-prometheus-metrics.md  11-scheduled-jobs.md  12-deployment.md  13-troubleshooting.md  14-testing.md  15-contributing.md  16-ejemplos-frontend.md  17-ejemplos-postman.md  18-sdk-examples.md  README.md  generate_all_docs.sh
existing_ws_qrdetection/: app_flow_image.py  app_fun_qrdetection.py
firebase_account/: lum-rewards-app-firebase-adminsdk-fbsvc-94ed659b15.json
migrations/: 2025_01_security_fixes.sql  2025_10_17_redemption_system.sql  2025_10_18_move_to_rewards_schema.sql  2025_12_12_security_improvements.sql  2025_12_16_add_short_code.sql  2025_12_16_redemption_code_uniqueness.sql  20260102_create_ai_usage_logs.sql  add_update_date_columns.sql  incremental_sync_schema.sql
models/: .gitkeep
qr-detection-service/: Cargo.toml
scripts/: batch_consistent_month.sh
shared/: Cargo.toml
shared/src/: auth.rs  cache.rs  config.rs  database.rs  error.rs  lib.rs  models.rs  service_client.rs  types.rs  utils.rs
src/: cache.rs  cache_key.rs  cache_ttl.rs  lib.rs  main.rs  state.rs
src/api/: admin_v4.rs  ask_ai_v4.rs  auth.rs  auth_v4.rs  common.rs  database_persistence.rs  email_check_v4.rs  gamification_service.rs  gamification_service.rs.backup  gamification_v4.rs  integrity_summary_v4.rs  interpret_results_v4.rs  invoice_headers_v4.rs  invoice_query_v4.rs  invoices_v4.rs  invoices_version_v4.rs  lumis_balance_v4.rs  mod.rs  movements_summary_v4.rs  notifications_v4.rs  ocr_iterative_v4.rs  ofertasws_v4.rs  performance.rs  profile_v4.rs  qr.rs  qr_processing_v4.rs  qr_v4.rs  register_v4.rs  rewards_balance_v4.rs  rewards_history_v4.rs  rewards_v4.rs  root_v4.rs  surveys_v4.rs  sync_status_v4.rs  system_v4.rs  tinder_v4.rs  unified_auth_v4.rs  unified_password.rs  upload_ocr_retry_v4.rs  upload_ocr_v4.rs  (+14 more)
src/cache/: mod.rs  offers_cache.rs
src/db/: mod.rs  ws_pool.rs
src/domains/: mod.rs
src/middleware/: auth.rs  idempotency.rs  mod.rs  (+3 more)
test_server/: Cargo.toml  test_server.rs
tests/: integration_test.rs  redemption_system_tests.rs  sync_integration_tests.rs  test_fcm_auth.rs
(+168 files in other folders)
