[workspace]
members = [
    ".",
    "shared",
    "api-gateway"
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across all services
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.75"
axum = { version = "0.7.4", features = ["macros", "multipart"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono", "rust_decimal", "ipnetwork" ] }
redis = { version = "0.32.5", features = ["aio", "tokio-comp"] }
regex = "1.0"
dashmap = "6.0"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "multipart", "cookies"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
bcrypt = "0.15"
validator = { version = "0.18", features = ["derive"] }
thiserror = "1.0.69"
jsonwebtoken = "9.2"
rust_decimal = { version = "1.35", features = ["serde-with-str"] }
futures = "0.3"
rand = "0.8"
deadpool-redis = "0.22.0"

# QR Detection specific
image = { version = "0.25.1", features = ["png", "jpeg"] }
rqrr = { version = "0.9.3", features = ["image"] }
quircs = "0.10.2"
rxing = "0.6.2"
zbar-rust = "0.0.24"
ort = { version = "2.0.0-rc.10", features = ["copy-dylibs"] }
ndarray = { version = "0.16", features = ["serde"] }

# Web scraping and OCR
scraper = "0.19.0"
sxd-document = "0.3"
sxd-xpath = "0.4"
url = { version = "2.5.0", features = ["serde"] }
base64 = "0.22.1"
urlencoding = "2.1"
percent-encoding = "2.3"

# Email service
lettre = { version = "0.11.7", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# Additional dependencies
imageproc = "0.25"

# Advanced caching dependencies
lru = "0.12"
bincode = "1.3"
hex = "0.4"

[package]
name = "lum_rust_ws"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
bcrypt = "0.15"
jsonwebtoken = "9.2"
validator = { version = "0.18", features = ["derive"] }
thiserror = "1.0.69"
rand = "0.8"
ipnetwork = "0.20"
rust_decimal = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
rqrr = { workspace = true }
quircs = { workspace = true }
rxing = { workspace = true }
zbar-rust = { workspace = true }
ort = { workspace = true }
ndarray = { workspace = true }
scraper = { workspace = true }
sxd-document = { workspace = true }
sxd-xpath = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
percent-encoding = { workspace = true }
lettre = { workspace = true }

imageproc = { workspace = true }
lru = { workspace = true }
bincode = { workspace = true }
deadpool-redis = { workspace = true }
hex = { workspace = true }
async-trait = "0.1.88"
regex.workspace = true
select = "0.6"

[dev-dependencies]
wiremock = "0.5"
mime = "0.3"
