[workspace]
members = [
    ".",
    "shared",
    "api-gateway"
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across all services
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.75"
axum = { version = "0.7.4", features = ["macros", "multipart"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono", "rust_decimal", "ipnetwork", "uuid" ] }
redis = { version = "0.32.5", features = ["aio", "tokio-comp"] }
regex = "1.0"
dashmap = "6.0"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "multipart", "cookies"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.2", features = ["trace", "cors", "compression-gzip", "compression-br", "compression-deflate", "fs"] }
bcrypt = "0.15"
validator = { version = "0.18", features = ["derive"] }
thiserror = "1.0.69"
jsonwebtoken = "9.2"
rust_decimal = { version = "1.35", features = ["serde-with-str"] }
futures = "0.3"
rand = "0.8"
deadpool-redis = "0.22.0"

# QR Detection and Generation
image = { version = "0.25.1", features = ["png", "jpeg"] }
rqrr = { version = "0.9.3", features = ["image"] }
quircs = "0.10.2"
rxing = "0.6.2"
zbar-rust = "0.0.24"
qrcode = { version = "0.14", default-features = false, features = ["image"] }  # QR generation for redemptions
ort = { version = "2.0.0-rc.10", features = ["copy-dylibs"] }
ndarray = { version = "0.16", features = ["serde"] }
kornia-rs = "0.1.5"

# Web scraping and OCR
scraper = "0.19.0"
sxd-document = "0.3"
sxd-xpath = "0.4"
url = { version = "2.5.0", features = ["serde"] }
base64 = "0.22.1"
urlencoding = "2.1"
percent-encoding = "2.3"

# Email service
lettre = { version = "0.11.7", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# Additional dependencies
imageproc = "0.25"

# Advanced caching dependencies
lru = "0.12"
bincode = "1.3"
hex = "0.4"

# Performance optimization
tikv-jemallocator = "0.5"
parking_lot = "0.12"  # Faster mutex implementation
num_cpus = "1.16"     # CPU detection for runtime config
bytes = "1.5"         # Efficient buffer management

# Observability & Metrics
prometheus = "0.13"
lazy_static = "1.4"

[package]
name = "lum_rust_ws"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
bcrypt = "0.15"
jsonwebtoken = "9.2"
sha2 = "0.10"  # Para checksums de sincronización incremental
validator = { version = "0.18", features = ["derive"] }
thiserror = "1.0.69"
rand = "0.8"
ipnetwork = "0.20"
rust_decimal = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
rqrr = { workspace = true }
quircs = { workspace = true }
rxing = { workspace = true }
zbar-rust = { workspace = true }
qrcode = { workspace = true }  # QR generation
ort = { workspace = true }
ndarray = { workspace = true }
scraper = { workspace = true }
sxd-document = { workspace = true }
sxd-xpath = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
percent-encoding = { workspace = true }
lettre = { workspace = true }

imageproc = { workspace = true }
lru = { workspace = true }
bincode = { workspace = true }
deadpool-redis = { workspace = true }
hex = { workspace = true }
async-trait = "0.1.88"
regex.workspace = true
select = "0.6"
kornia-rs = "0.1.5"
flate2 = "1.0"  # GZIP compression for ofertas
tokio-cron-scheduler = "0.10"  # Scheduled tasks for ofertas refresh
tikv-jemallocator = { workspace = true }  # Memory allocator optimization
parking_lot = "0.12"  # Faster mutex - no poisoning, better performance
num_cpus = "1.16"     # CPU detection for optimal runtime config
bytes = "1.5"         # Efficient buffer management for serialization
prometheus = { workspace = true }  # Metrics collection
lazy_static = { workspace = true }  # Static metrics registration
hmac = "0.12"  # HMAC for webhook signatures
gcp_auth = "0.12"  # OAuth 2.0 for FCM HTTP v1 API

[dev-dependencies]
wiremock = "0.5"
mime = "0.3"

[[bin]]
name = "test_webscrappy"
path = "test_webscrappy.rs"

[[bin]]
name = "test_cufe"
path = "test_cufe.rs"

[[bin]]
name = "test_ocr"
path = "test_ocr.rs"

[[bin]]
name = "lum_merchant_ws"
path = "src/bin/merchant_server.rs"
