[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
validator = { workspace = true }
rust_decimal = { workspace = true }
dotenvy = { workspace = true }
dashmap = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
thiserror = "1.0"
regex = "1.10"
rand = "0.8"
sha2 = "0.10"