[workspace]

[package]
name = "test_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_server"
path = "test_server.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.4", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.2", features = ["cors"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
deadpool-redis = "0.15"
redis = "0.25"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }